# screentest

./: .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  NEW_TESTS  NEW_TESTS.md  README  README.md  autogen.sh  basic_test.c  blink_test.c  callbacks.c  callbacks.h  config.h  configure.ac  configure.in  gettext.h  grid_test.c  horizontal_test.c  index.html  interface.c  interface.h  main.c  main.h  meson.build  screentest.glade  screentest.glade2  screentest.glade2p  screentest.spec  screentest.ui  screentest_colors.c  screentest_colors.h  support.c  (+14 more)
.github/workflows/: clang-format-check.yaml  compile.yml
po/: LINGUAS  POTFILES.in  cs.po  da.po  de.po  fi.po  fr.po  screentest.pot
